--- a/jenkins.yml
+++ b/jenkins.yml
@@ -82,13 +82,14 @@ Resources:
             apt-get update -y
             apt-get install -y apt-transport-https ca-certificates curl software-properties-common
             curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu noble stable"
-            apt-get update -y
-            apt-get install -y docker-ce
-            systemctl start docker
-            systemctl enable docker
-            docker pull jenkins/jenkins:lts
-            docker run -d -p 8080:8080 -p 50000:50000 --name jenkins -v jenkins_home:/var/jenkins_home jenkins/jenkins:lts
+            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu jammy stable"
+            sudo apt-get update -y
+            sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+            sudo systemctl start docker
+            sudo systemctl enable docker
+            sudo docker pull jenkins/jenkins:lts
+            sudo docker run -d -p 8080:8080 -p 50000:50000 --name jenkins -v jenkins_home:/var/jenkins_home jenkins/jenkins:lts
+
 
   #  instanciaApache:
   #    Type: 'AWS::EC2::Instance'
