--- a/yml/jenkins.yml
+++ b/yml/jenkins.yml
@@ -1,115 +1,114 @@
 Resources:
-    VPC:
-      Type: AWS::EC2::VPC
-      Properties:
-        CidrBlock: 10.0.0.0/16
-        EnableDnsSupport: 'true'
-        EnableDnsHostnames: 'true'
-        Tags:
-        - Key: name
+  VPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      CidrBlock: 10.0.0.0/16
+      EnableDnsSupport: 'true'
+      EnableDnsHostnames: 'true'
+      Tags:
+        - Key: Name
           Value: vpc-trabajo
 
-    InternetGateway:
-      Type: AWS::EC2::InternetGateway
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
 
-    AttachGateway:
-      Type: AWS::EC2::VPCGatewayAttachment
-      Properties:
-        VpcId: !Ref VPC
-        InternetGatewayId: !Ref InternetGateway
+  AttachGateway:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref VPC
+      InternetGatewayId: !Ref InternetGateway
 
-    RouteTable:
-      Type: AWS::EC2::RouteTable
-      Properties:
-        VpcId: !Ref VPC
+  RouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
 
-    Route:
-      Type: AWS::EC2::Route
-      DependsOn: AttachGateway
-      Properties:
-        RouteTableId: !Ref RouteTable
-        DestinationCidrBlock: 0.0.0.0/0
-        GatewayId: !Ref InternetGateway
+  Route:
+    Type: AWS::EC2::Route
+    DependsOn: AttachGateway
+    Properties:
+      RouteTableId: !Ref RouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref InternetGateway
 
-    Subnet:
-      Type: AWS::EC2::Subnet
-      Properties:
-        VpcId: !Ref VPC
-        CidrBlock: 10.0.1.0/24
-        MapPublicIpOnLaunch: true
+  Subnet:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.0.1.0/24
+      MapPublicIpOnLaunch: true
 
-    SubnetRouteTableAssociation:
-      Type: AWS::EC2::SubnetRouteTableAssociation
-      Properties:
-        SubnetId: !Ref Subnet
-        RouteTableId: !Ref RouteTable
+  SubnetRouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref Subnet
+      RouteTableId: !Ref RouteTable
 
-    GrupoSeguridadJenkins:
-      Type: AWS::EC2::SecurityGroup
-      Properties:
-        GroupDescription: Grupo de Seguridad de Jenkins
-        VpcId: !Ref VPC
-        SecurityGroupIngress:
-          - IpProtocol: tcp
-            FromPort: 22
-            ToPort: 22
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 80
-            ToPort: 80
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 8080
-            ToPort: 8080
-            CidrIp: 0.0.0.0/0
+  GrupoSeguridadJenkins:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Grupo de Seguridad de Jenkins
+      VpcId: !Ref VPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8080
+          ToPort: 8080
+          CidrIp: 0.0.0.0/0
 
-    instanciaJenkins:
-      Type: AWS::EC2::Instance
-      Properties:
-        ImageId: ami-00402f0bdf4996822
-        InstanceType: t2.micro
-        KeyName: jenkins_key_pair
-        SubnetId: !Ref Subnet
-        SecurityGroupIds:
-          - !Ref GrupoSeguridadJenkins
-        Tags:
-          - Key: Name
-            Value: instanciaJenkins
+  instanciaJenkins:
+    Type: AWS::EC2::Instance
+    Properties:
+      ImageId: ami-00402f0bdf4996822
+      InstanceType: t2.micro
+      KeyName: jenkins_key_pair
+      SubnetId: !Ref Subnet
+      SecurityGroupIds:
+        - !Ref GrupoSeguridadJenkins
+      Tags:
+        - Key: Name
+          Value: instanciaJenkins
+      UserData:
+        Fn::Base64: !Sub |
+          #!/bin/bash
 
-        UserData:
-          Fn::Base64: !Sub |
-            #!/bin/bash
-            sudo apt-get update -y
-            sudo apt-get upgrade -y
-            sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
-            sudo mkdir -p /usr/share/keyrings
-            sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /usr/share/keyrings/docker-archive-keyring.gpg
-            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-            sudo add-apt-repository -y "deb [arch=amd64] https://download.docker.com/linux/ubuntu jammy stable"
-            sudo apt-get update -y
-            sudo apt-get upgrade -y
-            sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-            sudo systemctl start docker
-            sudo systemctl enable docker
-            sudo docker pull jenkins/jenkins:lts
-            sudo docker run -d -p 8080:8080 -p 50000:50000 --name jenkins -v jenkins_home:/var/jenkins_home jenkins/jenkins:lts
+          # Solucionar posibles bloqueos en dpkg
+          export DEBIAN_FRONTEND=noninteractive
+          sudo rm -rf /var/lib/dpkg/lock
+          sudo rm -rf /var/lib/dpkg/lock-frontend
+          sudo dpkg --configure -a
+          while sudo fuser /var/lib/dpkg/lock >/dev/null 2>&1; do
+            echo "Esperando que termine otro proceso de apt/dpkg..."
+            sleep 5
+          done
+          sudo apt-get update -y --fix-missing
+          sudo apt-get upgrade -y--allow-downgrades --allow-remove-essential --allow-change-held-packages
 
-  #  instanciaApache:
-  #    Type: 'AWS::EC2::Instance'
-  #    Properties:
-  #       ImageId: ami-00402f0bdf4996822
-  #       InstanceType: t2.micro
-  #       KeyName: jenkins_key_pair
-  #       SecurityGroupIds:
-  #         - sg-043bcdf699413a158
-  #       Tags:
-  #         - Key: Name
-  #           Value: instanciaCursoGTN
+          # Instalar dependencias necesarias
+          sudo apt-get install -y apt-transport-https ca-certificates curl gnupg software-properties-common
 
-  #       UserData:
-  #         Fn::Base64: !Sub |
-  #           #!/bin/bash
-  #           apt-get update -y
-  #           apt-get install apache2 -y
-  #           systemctl start apache2
-  #           systemctl enable apache2
+          # Configurar claves y repositorio de Docker
+          sudo mkdir -m 0755 -p /etc/apt/keyrings
+          sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo tee /etc/apt/keyrings/docker.asc > /dev/null
+          sudo chmod a+r /etc/apt/keyrings/docker.asc
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+          # Instalar Docker y componentes
+          sudo apt-get update -y --fix-missing
+          sudo apt-get upgrade -y --allow-downgrades --allow-remove-essential --allow-change-held-packages
+          sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+
+          # Iniciar y habilitar Docker
+          sudo systemctl start docker
+          sudo systemctl enable docker
+
+          # Descargar y ejecutar Jenkins en Docker
+          sudo docker pull jenkins/jenkins:lts
+          sudo docker run -d -p 8080:8080 -p 50000:50000 --name jenkins -v jenkins_home:/var/jenkins_home jenkins/jenkins:lts
