Fix export repo docker

--- a/yml/jenkins.yml
+++ b/yml/jenkins.yml
@@ -95,14 +95,13 @@ Resources:
           sudo apt-get install -y apt-transport-https ca-certificates curl gnupg software-properties-common
 
           # Configurar claves y repositorio de Docker
-          sudo mkdir -m 0755 -p /etc/apt/keyrings
-          sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo tee /etc/apt/keyrings/docker.asc > /dev/null
+          sudo mkdir -p /etc/apt/keyrings
+          sudo curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc
           sudo chmod a+r /etc/apt/keyrings/docker.asc
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 
           # Instalar Docker y componentes
           sudo apt-get update -y --fix-missing
-          sudo apt-get upgrade -y --allow-downgrades --allow-remove-essential --allow-change-held-packages
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
           # Iniciar y habilitar Docker
